--- a/src/partials/certificates.html
+++ b/src/partials/certificates.html
@@ -7,49 +7,49 @@
         <div class="certificates__content">
 
             <div class="certificates__elem">
-                <a class="certificates__img" style="background-image: url(img/certificates/1.jpg);"></a>
+                <a data-fancybox="gallery-certificates" data-src="img/certificates/1.jpg" class="certificates__img" style="background-image: url(img/certificates/1.jpg);"></a>
                 <h3 class="certificates__text">Заключение СанПин</h3>
                 <a href="https://disk.yandex.ru/i/7_XuLcSNAGAQ9g" class="certificates__download">Скачать PDF</a>
             </div>
 
             <div class="certificates__elem">
-                <a class="certificates__img" style="background-image: url(img/certificates/2.jpg);"></a>
+                <a data-fancybox="gallery-certificates" data-src="img/certificates/2.jpg" class="certificates__img" style="background-image: url(img/certificates/2.jpg);"></a>
                 <h3 class="certificates__text">Декларация соответствия Айроклин</h3>
                 <a href="https://disk.yandex.ru/i/_I76XfWF7q_y0A" class="certificates__download">Скачать PDF</a>
             </div>
 
             <div class="certificates__elem">
-                <a class="certificates__img" style="background-image: url(img/certificates/3.jpg);"></a>
+                <a data-fancybox="gallery-certificates" data-src="img/certificates/3.jpg" class="certificates__img" style="background-image: url(img/certificates/3.jpg);"></a>
                 <h3 class="certificates__text">Сертификат соответствия</h3>
                 <a href="https://disk.yandex.ru/i/wBlk24kPKB736g" class="certificates__download">Скачать PDF</a>
             </div>
 
             <div class="certificates__elem">
-                <a class="certificates__img" style="background-image: url(img/certificates/4.jpg);"></a>
+                <a data-fancybox="gallery-certificates" data-src="img/certificates/4.jpg" class="certificates__img" style="background-image: url(img/certificates/4.jpg);"></a>
                 <h3 class="certificates__text">Сертификат качества<br> ООО АВАП-монтаж</h3>
                 <a href="https://disk.yandex.ru/i/jFLwnjKXlg_pIA" class="certificates__download">Скачать PDF</a>
             </div>
 
             <div class="certificates__elem">
-                <a class="certificates__img" style="background-image: url(img/certificates/5.jpg);"></a>
+                <a data-fancybox="gallery-certificates" data-src="img/certificates/5.jpg" class="certificates__img" style="background-image: url(img/certificates/5.jpg);"></a>
                 <h3 class="certificates__text">Сертификат оценка риска в области безопасности труда и охраны здоровья</h3>
                 <a href="https://disk.yandex.ru/i/y8ORIM68iF6zfw" class="certificates__download">Скачать PDF</a>
             </div>
 
             <div class="certificates__elem">
-                <a class="certificates__img" style="background-image: url(img/certificates/6.jpg);"></a>
+                <a data-fancybox="gallery-certificates" data-src="img/certificates/6.jpg" class="certificates__img" style="background-image: url(img/certificates/6.jpg);"></a>
                 <h3 class="certificates__text">Регистрационное удостоверение на медицинское изделие</h3>
                 <a href="https://drive.google.com/file/d/1BuBjRY0EoutWnzUlbuIpJmBvTnEUz-Vn" class="certificates__download">Скачать PDF</a>
             </div>
 
             <div class="certificates__elem">
-                <a class="certificates__img" style="background-image: url(img/certificates/7.jpg);"></a>
+                <a data-fancybox="gallery-certificates" data-src="img/certificates/7.jpg" class="certificates__img" style="background-image: url(img/certificates/7.jpg);"></a>
                 <h3 class="certificates__text">Приложение к РУ на медицинское изделие</h3>
                 <a href="https://drive.google.com/file/d/1BuBjRY0EoutWnzUlbuIpJmBvTnEUz-Vn" class="certificates__download">Скачать PDF</a>
             </div>
 
             <div class="certificates__elem">
-                <a class="certificates__img" style="background-image: url(img/certificates/8.jpg);"></a>
+                <a data-fancybox="gallery-certificates" data-src="img/certificates/8.jpg" class="certificates__img" style="background-image: url(img/certificates/8.jpg);"></a>
                 <h3 class="certificates__text">Приложение к РУ на медицинское изделие</h3>
                 <a href="https://drive.google.com/file/d/1BuBjRY0EoutWnzUlbuIpJmBvTnEUz-Vn" class="certificates__download">Скачать PDF</a>
             </div>
