--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,17 +6,17 @@
         <div class="reviews__content">
 
             <div class="reviews__elem">
-                <a class="reviews__img" style="background-image: url(img/reviews/1.jpg);"></a>
+                <a data-fancybox="gallery-reviews" data-src="img/reviews/1.jpg" class="reviews__img" style="background-image: url(img/reviews/1.jpg);"></a>
                 <h3 class="reviews__text">Благодарственное письмо</h3>
             </div>
 
             <div class="reviews__elem">
-                <a class="reviews__img" style="background-image: url(img/reviews/2.jpg);"></a>
+                <a data-fancybox="gallery-reviews" data-src="img/reviews/2.jpg" class="reviews__img" style="background-image: url(img/reviews/2.jpg);"></a>
                 <h3 class="reviews__text">Благодарственное письмо</h3>
             </div>
 
             <div class="reviews__elem">
-                <a class="reviews__img" style="background-image: url(img/reviews/3.jpg);"></a>
+                <a data-fancybox="gallery-reviews" data-src="img/reviews/3.jpg" class="reviews__img" style="background-image: url(img/reviews/3.jpg);"></a>
                 <h3 class="reviews__text">Благодарственное письмо</h3>
             </div>
 
