--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,8 +33,10 @@
 
 @import "./components/footer";
 
+//popups
 @import "./components/news-popup";
 @import "./components/popup-catalog";
+@import "./components/popup-forms";
 
 // about
 @import "./components/about-content";
