--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="footer__mails">
 					<a href="mailto:b.morozov@avap-montage.ru" class="mail mail_white">b.morozov@avap-montage.ru</a>
-					<a href="" class="footer__btn btn">Отправить запрос</a>
+					<a data-fancybox="form-full" data-src="#form-full" class="footer__btn btn">Отправить запрос</a>
 				</div>
 			</div>
 
