--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
 						<div class="contact__mail">
 							<a href="mailto:b.morozov@avap-montage.ru" class="mail">b.morozov@avap-montage.ru</a>
 						</div>
-						<a href="" class="contact__btn btn">ОТПРАВИТЬ ЗАПРОС</a>
+						<a data-fancybox="form-full" data-src="#form-full" class="contact__btn btn">ОТПРАВИТЬ ЗАПРОС</a>
 					</div>
 				</div>
 
