--- a/src/partials/info-catalog.html
+++ b/src/partials/info-catalog.html
@@ -19,7 +19,7 @@
                         <li>Бесплатная доставка оптом и в розницу по всей России до адреса получателя.</li>
                         <li>Скидки оптовым Заказчикам и Дилерам.</li>
                     </ul>
-                    <a class="info-catalog__btn btn btn_blue">Стать дилером</a>
+                    <a data-fancybox="form-lite" data-src="#form-lite" class="info-catalog__btn btn btn_blue">Стать дилером</a>
                 </div>
 
                 <a class="info-catalog__img" style="background-image: url(img/info-catalog/back.jpg);"></a>
