--- a/src/partials/info-catalog2.html
+++ b/src/partials/info-catalog2.html
@@ -16,7 +16,7 @@
                         <li>Блок управления секцией с индикацией работоспособности и счетчиком времени наработки ламп в рабочей зоне обслуживающего персонала.</li>
                         <li>Бесплатная доставка по всей России до адреса получателя</li>
                     </ul>
-                    <a class="info-catalog__btn btn btn_blue">Стать дилером</a>
+                    <a data-fancybox="form-lite" data-src="#form-lite" class="info-catalog__btn btn btn_blue">Стать дилером</a>
                 </div>
 
                 <a class="info-catalog__img" style="background-image: url(img/info-catalog/back2.jpg);"></a>
