--- a/src/partials/dilivery.html
+++ b/src/partials/dilivery.html
@@ -3,7 +3,7 @@
     <div class="wrapper">
         <div class="dilivery__content">
             <h3 class="dilivery__text">Бесплатная доставка по всей России до адреса получателя</h3>
-            <a class="dilivery__btn btn btn_blue">Оформить доставку</a>
+            <a data-fancybox="form-full" data-src="#form-full" class="dilivery__btn btn btn_blue">Оформить доставку</a>
         </div>
     </div>
 </div>
