--- a/src/partials/how-working.html
+++ b/src/partials/how-working.html
@@ -27,7 +27,7 @@
 
             </div>
 
-            <a class="how-working__btn btn btn_blue">Начать сотрудничество</a>
+            <a data-fancybox="form-full" data-src="#form-full" class="how-working__btn btn btn_blue">Начать сотрудничество</a>
         </div>
     </div>
 </div>
