--- a/src/partials/info-catalog3.html
+++ b/src/partials/info-catalog3.html
@@ -18,7 +18,7 @@
                         <li>Легкий алюминиевый корпус.</li>
                         <li>Бесплатная доставка оптом и в розницу по всей России до адреса получателя</li>
                     </ul>
-                    <a class="info-catalog__btn btn btn_blue">Стать дилером</a>
+                    <a data-fancybox="form-lite" data-src="#form-lite" class="info-catalog__btn btn btn_blue">Стать дилером</a>
                 </div>
 
                 <a class="info-catalog__img" style="background-image: url(img/info-catalog/back3.jpg);"></a>
