--- a/src/partials/not-find.html
+++ b/src/partials/not-find.html
@@ -4,7 +4,7 @@
             <a class="not-find__img"></a>
             <div class="not-find__info">
                 <h3 class="not-find__text">Если Вы не нашли модель, соответствующую Вашему каналу вентиляции, мы спроектируем и изготовим ее индивидуально</h3>
-                <a class="not-find__btn btn btn_blue">Отправить запрос</a>
+                <a data-fancybox="form-full" data-src="#form-full" class="not-find__btn btn btn_blue">Отправить запрос</a>
             </div>
         </div>
     </div>
