--- a/src/partials/_foot-scripts.html
+++ b/src/partials/_foot-scripts.html
@@ -19,3 +19,11 @@
         "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
     });
   </script>
+  <script>
+    const phoneInputFieldss = document.querySelector("#phone2");
+    const phoneInputss = window.intlTelInput(phoneInputFieldss, {
+      initialCountry: "ru",
+      utilsScript:
+        "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
+    });
+  </script>
