--- a/src/partials/_foot-scripts.html
+++ b/src/partials/_foot-scripts.html
@@ -27,3 +27,8 @@
         "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
     });
   </script>
+
+<iframe id="cloudim_chat" width="310" height="5" scrolling="no" frameborder="0" src="https://cloudim.ru/im/?&amp;silent=true&amp;accept_chats=false&amp;need[name]=false&amp;need[email]=false&amp;&amp;uid=49784&amp;group=34619&amp;url=https%3A%2F%2Fdezinfekziya.ru%2F&amp;referer=&amp;page=%D0%9F%D1%80%D0%BE%D0%B8%D0%B7%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE%20%D0%B1%D0%B0%D0%BA%D1%82%D0%B5%D1%80%D0%B8%D1%86%D0%B8%D0%B4%D0%BD%D1%8B%D1%85%20%D1%80%D0%B5%D1%86%D0%B8%D1%80%D0%BA%D1%83%D0%BB%D1%8F%D1%82%D0%BE%D1%80%D0%BE%D0%B2%20%D0%B2%20%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-" style="position: fixed; bottom: 0px; right: 20px; z-index: 999; width: 310px; height: 5px; min-height: 0px; display: none;"></iframe>
+
+<script type="text/javascript" data-tilda-cookie-type="analytics"> setTimeout(function(){ (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); window.mainMetrikaId = 69958795; ym(window.mainMetrikaId , "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true,ecommerce:"dataLayer" }); }, 2000);</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/69958795" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
