--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,9 +20,9 @@
 						<a href="/" class="nav__elem">Главная</a>
 						<a href="about.html" class="nav__elem">О компании</a>
 						<a href="#info-catalog" class="nav__elem">Каталог</a>
-						<a href="#certificates" class="nav__elem">Сертификаты</a>
+						<a href="certificates.html" class="nav__elem">Сертификаты</a>
 						<a class="nav__elem">Дилерам</a>
-						<a href="#backcall" class="nav__elem">Контакты</a>
+						<a href="contacts.html" class="nav__elem">Контакты</a>
 					</nav>
 				</div>
 
