--- a/src/scss/components/news-card.scss
+++ b/src/scss/components/news-card.scss
@@ -27,6 +27,60 @@
         background-position: center;
         width: 100%;
         height: 270px;
+        &_1 {
+            background-image: url(../img/news/slider/1/1.jpg);
+            animation: 5s infinite image-news-1;
+        }
+        @keyframes image-news-1 {
+            0% { 
+              background-image: url(../img/news/slider/1/1.jpg);
+            }
+            40% {
+              background-image: url(../img/news/slider/1/1.jpg);
+            }
+            50% {
+              background-image: url(../img/news/slider/1/2.jpg);
+            }
+            90% {
+              background-image: url(../img/news/slider/1/2.jpg);
+            }
+        }
+        &_2 {
+            background-image: url(../img/news/2.jpg);
+            animation: 5s infinite image-news-2;
+        }
+        @keyframes image-news-2 {
+            0% { 
+                background-image: url(../img/news/slider/2/1.jpg);
+            }
+            40% {
+                background-image: url(../img/news/slider/2/1.jpg);
+            }
+            50% {
+                background-image: url(../img/news/slider/2/2.jpg);
+            }
+            90% {
+                background-image: url(../img/news/slider/2/2.jpg);
+            }
+        }
+        &_3 {
+            background-image: url(../img/news/3.jpg);
+            animation: 5s infinite image-news-3;
+        }
+        @keyframes image-news-3 {
+            0% { 
+              background-image: url(../img/news/slider/3/1.jpg);
+            }
+            40% {
+              background-image: url(../img/news/slider/3/1.jpg);
+            }
+            50% {
+              background-image: url(../img/news/slider/3/2.jpg);
+            }
+            90% {
+              background-image: url(../img/news/slider/3/2.jpg);
+            }
+        }
     }
     &__title {
         color: #0a113c;
