--- a/src/partials/baktericzidnaya-nasadka-na-split-sistemu/actual-table.html
+++ b/src/partials/baktericzidnaya-nasadka-na-split-sistemu/actual-table.html
@@ -1,13 +1,86 @@
 <div class="actual-table">
     <div class="wrapper">
-        <div class="catalog__title title">
-            <h2>Модели</h2>
-            <span></span>
-        </div>
-        <div class="actual-table__content">
+        <div class="catalog__content">
 
-            <div class="actual-table__elem">СБО-К-02</div>
+            <div class="catalog__grid">
+
+                <div class="catalog__title title">
+                    <h2>Модели</h2>
+                    <span></span>
+                </div>
+
+                <div class="catalog__card product__element">
+                    <div class="card">
+                        <a class="card__img" style="background-image: url(img/catalog2/1.jpg);"></a>
+                        <h3 class="card__title">СБО-К-02</h3>
+                        <div class="card__info">
+                            <p>Мощность бактерицидного излучения: 15 Фбх, Вт</p>
+                            <p>Диапазон потери давления прибором: 15-20 Па</p>
+                            <p>Размеры: 125(ш) х 55 (в) х 500 (д)</p>
+                            <p>Вес: 1,8 кг</p>
+                        </div>
+                        <p class="card__price">11 000 ₽</p>
+                        <div class="product__quantity"></div>
+                        <div class="card__btns">
+                            <a data-fancybox="catalog-6-item-1" data-src="#catalog-6-item-1" class="card__btn btn btn_blue">Подробнее</a>
+                            <button class="product__add-to-cart-button card__btn btn" data-sb-id-or-vendor-code="081" data-sb-product-name="СБО-К-02" data-sb-product-price="11000" data-sb-product-quantity="1" data-sb-product-img="img/catalog2/1.jpg">
+                              Заказать
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="catalog-6-item-1" class="popup-catalog">
+    <div class="popup-catalog__content">
+
+        <div class="popup-catalog__slider">
+
+            <div class="slider-popup-catalog">
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/1.png);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/2.png);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/3.png);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/4.png);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/5.png);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/6.jpg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/7.jpg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/8.jpg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/9.jpg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/10.jpg);"></a>
+                <a class="slider-popup-catalog__slide" style="background-image: url(img/catalog-slider/catalog6/1/11.jpg);"></a>
+            </div>
+
+            <div class="slider-nav">
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/1.png);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/2.png);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/3.png);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/4.png);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/5.png);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/6.jpg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/7.jpg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/8.jpg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/9.jpg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/10.jpg);"></a>
+                <a class="slider-nav__slide" style="background-image: url(img/catalog-slider/catalog6/1/11.jpg);"></a>
+            </div>
 
         </div>
+
+        <div class="popup-catalog__info">
+            <h2 class="popup-catalog__title">СБО-К-02</h2>
+            <p class="popup-catalog__price">11 000 ₽</p>
+            <button class="product__add-to-cart-button card__btn btn" data-sb-id-or-vendor-code="081" data-sb-product-name="СБО-К-02" data-sb-product-price="11000" data-sb-product-quantity="1" data-sb-product-img="img/catalog2/1.jpg">
+                Заказать
+              </button>
+            <span class="popup-catalog__title-list">Технические характеристики:</span>
+            <ul class="popup-catalog__list">
+                <li>Мощность бактерицидного излучения: 15 Фбх, Вт</li><li>Диапазон потери давления прибором: 15-20 Па</li><li>Напряжение: 220В </li><li>Мощность лампы: 15 Вт</li><li>Потребляемая мощность: 0,015 Вт</li><li>Суммарный бактерицидный поток: 4 Вт</li><li>Размеры: 125(ш) х 55 (в) х 500 (д)</li><li>Вес: 1,8 кг</li>
+            </ul>
+        </div>
+
     </div>
 </div>
